--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
   "openai>=1.40",
   "python-multipart>=0.0.9",
   "sqlalchemy>=2.0",
+  "pandas>=2.2",
+  "statsmodels>=0.14",
 ]
 
 [project.optional-dependencies]
