--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
