feat: added sign-in and sign-up auth

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,6 @@
+# Backend API
+VITE_API_BASE_URL=http://localhost:8000
+
 # OpenAI/LLM API Keys (for AI discovery and review validation)
 VITE_OPENAI_API_KEY=your-openai-api-key-here
 VITE_OPENAI_BASE_URL=https://api.openai.com/v1
